--- a/_data/i18n/form.yml
+++ b/_data/i18n/form.yml
@@ -57,8 +57,8 @@ presets:
       en: Select a public administration from the drop-down field or add a new one in case the administration does not exist.
       fr: Choisir l'administration publique dans la liste ci-dessous. Créer une nouvelle au cas où l'administration n'était pas déjà dans la liste.
     label:
-      en: Public administration
-      fr: Administration publique
+      en: Canadian public administration
+      fr: Administration publique Canadienne
     button:
       en: Add a new administration
       fr: Ajouter une nouvelle administration
