--- a/_data/i18n/tables.yml
+++ b/_data/i18n/tables.yml
@@ -38,9 +38,10 @@ licence:
 team:
   en: Team
   fr: Équipe
-projectName:
-  en: Project Name
-  fr: Nom du projet
+partnership: &projectName
+  en: Project name
+  fr: Nom du project
+projectName: *projectName
 relatedCode:
   en: Related Code
   fr: Code Associé
