--- a/_data/i18n/form.yml
+++ b/_data/i18n/form.yml
@@ -108,21 +108,27 @@ presets:
           en: What it does?
           fr: De quoi il s'agit?
         en:
-          en: English
-          fr: Anglais
+          en: English description on what it does
+          fr: Description en anglais de ce dont il s'agit
         fr:
-          en: French
-          fr: Francais
+          en: French description on what it does
+          fr: Description en francais de ce dont il s'agit
+        schema:
+          en: What it does
+          fr: De quoi il s'agit
       howItWorks:
         subtitle:
           en: How it works?
           fr: Comment cela fonctionne?
         en:
-          en: English
-          fr: Anglais
+          en: English description on how it works
+          fr: Description en anglais sur comment cela fonctionne
         fr:
-          en: French
-          fr: Francais
+          en: French description on how it works
+          fr: Description en français sur comment cela fonctionne
+        schema:
+          en: How it works
+          fr: Comment cela fonctionne
     label:
       schema:
         en: Description
@@ -131,15 +137,15 @@ presets:
       en: (200 characters limit)
       fr: (limite de 200 caractères)
     infobulle:
-      en: Add brief descriptions on what the project does and how it works.  
+      en: Add brief descriptions on what the project does and how it works.
       fr: Ajoutez une brève description, expliquant de quoi il s'agit et comment cela fonctionne.
     titles:
-      en:
-        en: English description
-        fr: Description en anglais
-      fr:
-        en: French description
-        fr: Description en francais
+      whatItDoes:
+        en: Description on what it does
+        fr: Description de ce dont it s'agit
+      howItWorks:
+        en: Description on how it works
+        fr: Description sur comment cela fonctionne
   homepageURL:
     title:
       en: Project Homepage
@@ -214,19 +220,15 @@ presets:
       en: Key Partners
       fr: Partenaires
     labels:
-      contactemail:
+      adminCode:
+        en: Admin code
+        fr: Code de l'administration
+      email:
         en: Contact email
         fr: Addresse courriel du contact
-      contactname:
-        en: Contact name
-        fr: Nom du contact
       name:
-        en:
-          en: English Name
-          fr: Nom en anglais
-        fr:
-          en: Name in french
-          fr: Nom en français
+          en: Name of the contact
+          fr: Nom du contact
     label:
       en: Select an administration or create a new one.
       fr: Sélectionnez une administration ou créez en une nouvelle.
@@ -551,6 +553,9 @@ standard:
       fr:
         en: French name
         fr: Nom en français
+      schema:
+        en: Organization name
+        fr: Nom de l'organisation
     infobulle:
       en: Add the name of the organization developing, coordinating, promulgating, revising, amending, reissuing, interpreting or producing the standard.
       fr: Ajouter le nom de l'organization de standardisation qui développe, coordonne, promulgue, révise, modifie, interprète publie ou produit la norme.
@@ -682,3 +687,14 @@ partnership:
     infobulle:
       en: Select the period when the project is searching for partners.
       fr: Sélectionner la période pendant laquelle le projet est en recherche de partenaires.
+    titles:
+      started:
+        en: The date when the project started searching for partners (in format YYYY-MM-DD)
+        fr: La date où le projet à débuté sa recherche de partenaires (au format AAAA-MM-JJ)
+      closed:
+        en: THe date when the project will stop or has stopped searching for partners (in format YYYY-MM-DD)
+        fr: La date où le project terminera ou a terminé sa recherche de partenaires (au format AAAA-MM-JJ)
+  projects:
+    title:
+      en: Informations about each project
+      fr: Information à propos de chacun des projects
