--- a/_data/i18n/general.yml
+++ b/_data/i18n/general.yml
@@ -56,6 +56,12 @@ nav:
     link:
       en: ./docs.html
       fr: ./docs.html
+  partnership:
+    en: Partnership
+    fr: Partenariat
+    link:
+      en: ./partnerships.html
+      fr: ./partenariats.html
   Canada:
     en: Government of Canada
     fr: Gouvernement du Canada
