Corrected french spelling mistakes

--- a/_data/i18n/tables.yml
+++ b/_data/i18n/tables.yml
@@ -65,8 +65,8 @@ standard:
   en: Standard
   fr: Norme
 status:
-  en: Status
-  fr: Statut
+  en: 'Status :'
+  fr: 'Statut :'
 tag:
   en: Tag
   fr: Étiquette
@@ -79,8 +79,8 @@ usedBy:
 
 lightbox:
   hyperlink:
-    en: Reference URL
-    fr: URL de référence
+    en: 'Reference URL :'
+    fr: 'URL de référence :'
   sourceCode:
     en: Source code
     fr: Code source
@@ -90,3 +90,6 @@ lightbox:
   beingUsed:
     en: 'Is being used by:'
     fr: 'Est utilisé par :'
+  date:
+    en: 'Started using :'
+    fr: 'Utilisé depuis :'
