New files for open research

--- a/_data/i18n/general.yml
+++ b/_data/i18n/general.yml
@@ -38,6 +38,12 @@ nav:
     link:
       en: ./open-source-codes.html
       fr: ./codes-source-ouverts.html
+  research:
+    en: Open Research
+    fr: Recherche Libre
+    link:
+      en: ./open-researches.html
+      fr: ./recherches-libres.html
   software:
     en: Open Source Software
     fr: Logiciels libres
