Added files for open research and open design

--- a/_data/i18n/general.yml
+++ b/_data/i18n/general.yml
@@ -38,6 +38,12 @@ nav:
     link:
       en: ./open-source-codes.html
       fr: ./codes-source-ouverts.html
+  design:
+    en: Open Source Design
+    fr: Design Libre
+    link:
+      en: ./open-design.html
+      fr: ./design-libre.html
   research:
     en: Open Research
     fr: Recherche Libre
