--- a/_data/i18n/form.yml
+++ b/_data/i18n/form.yml
@@ -782,6 +782,20 @@ research:
     infobulle:
       en: Select the date when the public administration started contributing to the research.
       fr: Choisir la date lorsque l'administration publique a commencé à contribuer à la recherche.
+  researchAcronym:
+    title:
+      en: Research Acronym
+      fr: Acronyme de la recherche
+    label:
+      en: Research Acronym
+      fr: Acronyme de la recherche
+    labels:
+      select:
+        en: If you wish to update information of a research that already exists in our library, please select it below
+        fr: Si vous souhaitez mettre à jour les données d'une norme ajoutée déjà au catalogue, veuillez la sélectionner de la liste
+    infobulle:
+      en: Enter the short name or acronym for the new reseach.
+      fr: Entrer l'acronyme de la recherche ouverte.
   administrations: *administrations
   uses:
     title:
