--- a/_data/i18n/form.yml
+++ b/_data/i18n/form.yml
@@ -384,6 +384,16 @@ presets:
     title:
       en: Informations about software users.
       fr: Information à propos des utilisateurs du logiciel
+  date:
+    title:
+      en: Started using
+      fr: Date de début d'utilisation
+    label:
+      en: Started using
+      fr: Date de début d'utilisation
+    infobulle:
+      en: Select the date when the public administration started using the software.
+      fr: Choisir la date lorsque l'administration publique a commencé à utiliser le logiciel.
 
 # Code form specifics
 code:
