Update open research name

--- a/_data/i18n/general.yml
+++ b/_data/i18n/general.yml
@@ -45,8 +45,8 @@ nav:
       en: ./open-design.html
       fr: ./design-libre.html
   research:
-    en: Open Research
-    fr: Recherche Libre
+    en: Open Researches
+    fr: Recherches Libres
     link:
       en: ./open-researches.html
       fr: ./recherches-libres.html
