--- a/_data/i18n/form.yml
+++ b/_data/i18n/form.yml
@@ -709,3 +709,43 @@ partnership:
     title:
       en: Informations about each project
       fr: Information à propos de chacun des projects
+
+# Future project form specifics
+design:
+  name:
+    title:
+      en: Project Name
+      fr: Nom du projet
+    label:
+      en:
+        en: English project name
+        fr: Nom du projet en anglais
+      fr:
+        en: French project name
+        fr: Nom du projet en français
+      schema:
+        en: Project Name
+        fr: Nom du projet
+    labels:
+      select:
+        en: If you wish to update information of a design that already exists in our library, please select it below
+        fr: Si vous souhaitez mettre à jour les données d'un design déjà ajouté au catalogue, veuillez le sélectionner de la liste
+    infobulle:
+      en: Add the name of the open design
+      fr: Ajouter le nom du design libre
+  date:
+    title:
+      en: Started using
+      fr: Date de début d'utilisation
+    label:
+      en: Started using
+      fr: Date de début d'utilisation
+    infobulle:
+      en: Select the date when the public administration started using the design.
+      fr: Choisir la date lorsque l'administration publique a commencé à utiliser le design.
+  administrations: *administrations
+  uses:
+    title:
+      en: Informations about design users.
+      fr: Information à propos des utilisateurs du design
+  
