adding website link to software page

--- a/_data/i18n/tables.yml
+++ b/_data/i18n/tables.yml
@@ -87,3 +87,9 @@ lightbox:
   beingUsed:
     en: 'Is being used by:'
     fr: 'Est utilisé par :'
+  website:
+    en: 'Website:'
+    fr: 'Site internet:'
+  githubRepo:
+    en: 'Github repository:'
+    fr: 'Repertoire github :'
